--- a/references.bib
+++ b/references.bib
@@ -361,3 +361,25 @@
 	pages = "93--127",
 	number = "1",
 }
+
+@article{some-formulas-in-sl3-weight-systems,
+	author = {Shutaro Yoshizumi and Ken'ichi Kuga},
+	title = {{Some formulas in \(\mathfrak{sl}_3\) weight systems}},
+	volume = {75},
+	journal = {Proceedings of the Japan Academy, Series A, Mathematical
+	           Sciences},
+	number = {7},
+	publisher = {The Japan Academy},
+	pages = {134 -- 136},
+	year = {1999},
+}
+
+@article{on-values-of-sl3-weight-system-on-chord-diagrams-whose-intersection-graph-is-complete-bipartite,
+	title = {{On Values of \(\mathfrak{sl}_{3}\) Weight System on Chord
+	         Diagrams whose Intersection Graph is Complete Bipartite}},
+	author = {Zhuoke Yang},
+	journal = {Moscow Mathematical Journal},
+	year = {2024},
+	volume = {24},
+	pages = {125 -- 140},
+}
