Prepare for milnor-moore proof

--- a/references.bib
+++ b/references.bib
@@ -383,3 +383,12 @@
 	volume = {24},
 	pages = {125 -- 140},
 }
+
+@book{invariants-of-links-and-3-manifolds-from-graph-configurations,
+	place = {EMS Monographs in Mathematics},
+	title = {Invariants of Links and 3-Manifolds from Graph Configuration},
+	publisher = {European Mathematical Society Press },
+	author = {Christine Lescop},
+	year = {2024},
+}
+
