--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -965,7 +965,9 @@ We have shown that \(\mathcal{A}\) is a graded bialgebra of finite type. In fact
 	\end{proof}
 \end{shaded}
 
-Connected, commutative, cocommutative graded bialgebras of finite type are very rigid structures. In-particular, a classical strucutral theorem applies, and the Hopf algebra can be understood in terms of its primitive elements.
+Connected, commutative, cocommutative graded bialgebras of finite type are very rigid structures. In-particular, a classical strucutral theorem applies, and the Hopf algebra
+%TODO (Zsuzsi) Switched to calling it a Hopf algebra
+can be understood in terms of its primitive elements.
 
 \begin{definition}
 	An element \(x\) is \textbf{primitive} in a coalgebra (so in-particular in a bialgebra) with coproduct \(\Delta\) if it satisfies
@@ -999,7 +1001,7 @@ This fact leads to important consequences about the structure of \(\mathcal{A}\)
 In fact, considering a graded object as a filtered object with the naturally induced filtration, this coincides with the filtered bialgebraic dual.
 
 \begin{proof}
- %TODO (ZSuzsi) Proof of what?
+ %TODO (ZSuzsi) Proof of what? I think you need to take that statement out of the Definition into a Proposition environment.
 	Weight systems are linear functionals on chord diagrams, \(\mathcal{D}\) that vanish on \ref{eq:4Tstar} and \ref{eq:1Tstar}. This is the same as linear functionals on \(\mathcal{A} = \mathcal{D}/\ref{eq:4T}, \ref{eq:1T}\).
 
 	The rest of the proof, (i.e. that the product in \(\mathcal{W}\) is dual to the coproduct in \(\mathcal{A}\) and vice versa) follows exactly as in the proof sketch of the duality of bialgebras \(\mathcal{K}\) and \(\mathcal{V}\).
@@ -1017,6 +1019,7 @@ In Section \ref{sec:the-stratification-on-the-space-of-knots-and-integration}, w
 	\[\gr A = \bigoplus_{m = 0}^{\infty} A_{m} / A_{m - 1},\]
 	where \(A_{-1} = \{0\}\).
 	% TODO: Make bialgebra? Maybe?
+    %TODO (Zsuzsi): Yes, you need to explain 1) the algebra structure on grA, and 2) the coalgebra structure. This is especially important becasuse the direct sum is only true as vector spaces, not as algebras.
 \end{definition}
 
 \begin{theorem}[Fundamental theorem]
@@ -1024,7 +1027,7 @@ In Section \ref{sec:the-stratification-on-the-space-of-knots-and-integration}, w
 	The algebra of weight systems is isomorphic to the associated graded algebra of the algebra of Vassiliev invariants, \(\mathcal{W} \cong \gr \mathcal{V}\), or on the level of graded components,
 	\[\bigoplus_{m = 0}^{\infty} \mathcal{W}_{m} \cong \bigoplus_{m = 0}^{\infty} \mathcal{V}_{m} / \mathcal{V}_{m - 1}.\]
 
-	Equivalently, it can be stated in the dual setting as follows. The algebra of chord diagrams is isomorphic to the associated graded algebra of the algebra of knots, \(\mathcal{A} \cong \gr \mathcal{K}\), or on the level of graded components,
+	Equivalently, this can be stated in the dual setting as follows. The algebra of chord diagrams is isomorphic to the associated graded algebra of the algebra of knots, \(\mathcal{A} \cong \gr \mathcal{K}\), or on the level of graded components,
 	\[\bigoplus_{m = 0}^{\infty} \mathcal{A}_{m} \cong \bigoplus_{m = 0}^{\infty} \mathcal{K}_{m} / \mathcal{K}_{m + 1}.\]
 \end{theorem}
 
@@ -1042,16 +1045,29 @@ We can break the fundamental theorem up into two parts.
 	\end{tblr}
 \end{center}
 
-It is actually only the second part of this theorem, due to Kontesevich that is equivalent to Theorem \ref{thm:fundamental-theorem-of-vassiliev-invariants}. The first part, due to Vassiliev, is additional (so in reality, this `reformulation' is stronger), but considered ``easy'' relative to the second part. If the goal is to describe \(\mathcal{K}\) by \(\mathcal{A}\), it states that the relations in \(\mathcal{A}\), \ref{eq:4T} and \ref{eq:1T} are truly compatible with \(\mathcal{K}_{n}/\mathcal{K}_{n + 1}\). Indeed this was the point of Section \ref{sec:the-stratification-on-the-space-of-knots-and-integration}, so most of the work is already done.
+It is actually only the second part of this theorem, due to Kontesevich that is equivalent to Theorem \ref{thm:fundamental-theorem-of-vassiliev-invariants}. The first part, due to Vassiliev, is additional (so in reality, this `reformulation' is stronger), but considered ``easy'' relative to the second part. 
+%TODO (Zsuzsi) I would rearrange this sentence so that it's clear what easy refers to
+If the goal is to describe \(\mathcal{K}\) by \(\mathcal{A}\),
+%TODO (Zsuzsi) via A? using A?
+it 
+%TODO (Zsuzsi) What is 'it' referring to here?
+states that the relations in \(\mathcal{A}\), \ref{eq:4T} and \ref{eq:1T} are truly compatible with \(\mathcal{K}_{n}/\mathcal{K}_{n + 1}\). Indeed this was the point of Section \ref{sec:the-stratification-on-the-space-of-knots-and-integration}, so most of the work is already done.
 % TODO: Find reference for Vassiliev
-% TODO: Rephrase this as not to call Vassiliev's work ``easy''.
+% TODO: Rephrase this as not to call Vassiliev's work ``easy''. (Zsuzsi): Only 'easy' compared to Kontsevich's Fields medal... happens to the best of us;)
 
 \begin{proofof}{Theorem \ref{thm:fundamental-theorem-restated} (Vassiliev)}
-	For the map \(a \in \mathcal{A}_{m} \to \mathcal{K}_{m} / \mathcal{K}_{m + 1}\) we take the following. Given \(a \in \mathcal{A}_{m}\), take a singular knot \(k^{\bullet} \in \singularknots_{m}\) whose chord diagram is \(a\), then resolving it to an element of \(k \in \mathcal{K}_{m}\), and projecting that into the quotient \(\mathcal{K}_{m} / \mathcal{K}_{m + 1}\).
+	For the map \(a \in \mathcal{A}_{m} \to \mathcal{K}_{m} / \mathcal{K}_{m + 1}\) we take the following. 
+    %TODO (Zsuzsi) I would rephrase this sentence, $a$ is not a map. Also, perhaos you should first define the map ton $D_m$, and then descend to $A_m$ (which is what you practically do). 
+    Given \(a \in \mathcal{A}_{m}\), take a singular knot \(k^{\bullet} \in \singularknots_{m}\) whose chord diagram is \(a\), then
+    %TODO (Zsuzsi) switched from present tense to infinitive
+    resolving it to an element of \(k \in \mathcal{K}_{m}\), and projecting that into the quotient \(\mathcal{K}_{m} / \mathcal{K}_{m + 1}\).
 
-	This is well-defined since any other \({k^{\bullet}}'\) also has chord diagram \(a\). Any two \(m\)-singular knots with the same chord diagram differ by some crossing changes, in particular this applies to \(k^{\bullet}\) and \({k^{\bullet}}'\). But if \(k^{\bullet}\) and \({k^{\bullet}}'\) differ by a crossing change, then \(\delta^{m}(k^{\bullet})\) and \(\delta^{m}({k^{\bullet}}')\) differ by an element of \(\mathcal{K}_{m + 1}\), so \([\delta^{m}(k^{\bullet})] = [\delta^{m}({k^{\bullet}}')]\). This argument that any \(k^{\bullet} \in \singularknots_{m}\) can be chosen to represent \([\delta^{m}(k^{\bullet})]\)as long as it has chord diagram \(a\) will be used again below, and we refer to it as the crossing-change argument.
+	This is well-defined since any other \({k^{\bullet}}'\) also has chord diagram \(a\).
+    %TODO (Zsuzsi) Any other \({k^{\bullet}}'\) coming from where?
+    Any two \(m\)-singular knots with the same chord diagram differ by some crossing changes, in particular this applies to \(k^{\bullet}\) and \({k^{\bullet}}'\). But if \(k^{\bullet}\) and \({k^{\bullet}}'\) differ by a crossing change, then \(\delta^{m}(k^{\bullet})\) and \(\delta^{m}({k^{\bullet}}')\) differ by an element of \(\mathcal{K}_{m + 1}\), so \([\delta^{m}(k^{\bullet})] = [\delta^{m}({k^{\bullet}}')]\). This argument that any \(k^{\bullet} \in \singularknots_{m}\) can be chosen to represent \([\delta^{m}(k^{\bullet})]\)as long as it has chord diagram \(a\) will be used again below, and we refer to it as the crossing-change argument.
 
-	Recalling that \(\mathcal{A}_{m} = \mathcal{D}_{m} / \ref{eq:1T}, \ref{eq:4T}\), we need to show that the map factors through the quotient. Indeed \ref{eq:1T} is the kernel: a type \ref{eq:1T} chord diagram is sent to a singular knot with a singular point that is passed through twice in a row when the knot is traversed. The resolution, by the crossing-change argument, can be chosen to be a difference of two knots that are isotopic except around the \ref{eq:1T} double point:
+	Recalling that \(\mathcal{A}_{m} = \mathcal{D}_{m} / \ref{eq:1T}, \ref{eq:4T}\), we need to show that the map factors through the quotient. Indeed \ref{eq:1T} is in the kernel: a type \ref{eq:1T} chord diagram is sent to a singular knot with a singular point that is passed through twice in a row when the knot is traversed. The resolution, by the crossing-change argument, can be chosen to be a difference of two knots that are isotopic except around the \ref{eq:1T} double point:
+    %TODO (Zsuzsi) Make the 1T double point a different colour?
 	
 	\begin{align*}
 		\delta \left(
@@ -1072,7 +1088,8 @@ It is actually only the second part of this theorem, due to Kontesevich that is 
 	\[
 		\tftsouth \ - \ \tfteast \ - \ \tftnorth \ + \ \tftwest
 	\]
-	but after resolving around the singular point that they don't have in common this becomes
+	but after resolving around the singular point that they don't have in common this becomes 
+    %TODO (Zsuzsi) This should not be a single long sentence with a diagrammatic formula in the middle
 	\begin{shaded}
 		figure of the 8 terms that cancel out.
 	\end{shaded}
@@ -1085,17 +1102,20 @@ It is actually only the second part of this theorem, due to Kontesevich that is 
 	% TODO: really...?
 	Using similar arguments, from the formula of Willerton's Lemma, the isomorphism can be shown to respect the bialgebra structure.
 
-	The dual version of the statement follows from the regular version, but direct proofs are illustrative and we return to them later.
+	The dual version of the statement follows from the regular version, but direct proofs are illustrative and we return to them later. %TODO (Zsuzsi) Do you mean you'll show the direct proof of the dual version later?
 \end{proofof}
 
-For now, let's turn to the Vassiliev part of the fundamental theorem, with the following definition.
+For now, let's turn to the Vassiliev part of the fundamental theorem, with the following definition. %TODO (Zsuzsi) Didn't you just prove the Vassiliev part? When you say "the following definition", a definition should follow.
 
 The part of Theorem \ref{thm:fundamental-theorem-restated} due to Maxim Kontsevich \cite{vassilievs-knot-invariants} is much more involved. Konsevich constructed an integral invariant which proves the fundamental theorem, as well as containing the information of all Vassiliev invariants at the same time. We will not give a detailed exposition of Kontsevich's invariant here, but they abound in the literature, for example \cite{the-fundamental-theorem-of-vassiliev-invariants, the-kontsevich-integral, introduction-to-vassiliev-invariants} in order of increasing level of detail. Rather we will boil the Kontsevich integral down to a single universal property.
 
 \begin{definition}
 	The \textbf{completion} of a filtered algebra \(A\) is the filtered algebra
 	\[\widehat{A} = \varprojlim_{m \to \infty} A_{m} / A_{m + 1}.\]
-	In other words this is the degree-completion of the graded algebra \(\gr A\). Note that \(\widehat{A}\) is only a filtered algebra, not a graded one, as its elements can have infinitely many terms non-zero, so it doesn't decompose as a direct sum.
+    %TODO (Zsuzsi) This sdhould ne $A/A_{m+1}$ (otherwise the inverse limit is not defined)
+	In other words this is the degree-completion of the graded algebra \(\gr A\). 
+    %TODO (Zsuzsi) This is not true! see notes in email 9th of December
+    Note that \(\widehat{A}\) is only a filtered algebra, not a graded one, as its elements can have infinitely many terms non-zero, so it doesn't decompose as a direct sum.
 \end{definition}
 
 \begin{definition}
