--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -386,11 +386,11 @@ If we restrict Conjecture \ref{conj:strong-fundamental-theorem} to Vassiliev inv
 
 \begin{theorem}[Fundamental theorem of Vassiliev invariants]
 	\label{thm:fundamental-theorem-of-vassiliev-invariants}
-	Let \(v\) be an invariant of \(m\)-singular knots satsifying \textup{\ref{eq:T4Tstar}}, \textup{\ref{eq:T1Tstar}} and the additional condition that \(\delta^{k} v = 0\) for some \(k > 0\). Then \(v\) integrates \(m\) times into a genuine knot invariant (which is a Vassiliev invariant of order \(m\)).
+	Let \(v\) be an invariant of \(m\)-singular knots satsifying \textup{\ref{eq:T4Tstar}}, \textup{\ref{eq:T1Tstar}} and the additional condition that \(\delta v = 0\). Then \(v\) integrates \(m\) times into a genuine knot invariant (which is a Vassiliev invariant of order \(m\)).
 \end{theorem}
 
 There are various proofs of the fundamental theorem. They are listed in \cite{the-fundamental-theorem-of-vassiliev-invariants}, and each proof is accompanied by a series of moral objections.
-In the words of Bar-Natan: ``Always the method is indirect and very complicated, and/or some a-priori unnatural choices have to be made''. To summarise their philosophy:
+In the words of Bar-Natan: ``Always the method is indirect and very complicated, and/or some a-priori unnatural choices have to be made''.
 
 \begin{remark}
 	We have the implication Conjecture \ref{conj:strong-fundamental-theorem} \(\implies\) Theorem \ref{thm:fundamental-theorem-of-vassiliev-invariants}, and this is actually realised in the theory of braids. It is mysterious that the fate of the slightly stronger conjecture which comes from taking the natural topological approach to the fundamental theorem still remains unknown, and that there are grievances to be had with all known proofs of the theorem.
@@ -401,8 +401,6 @@ In Section \ref{sec:the-fundamental-theorem-of-vassiliev-invariants} we will loo
 
 \section{Knots and Vassiliev invariants}
 \label{sec:knots-and-vassiliev-invariants}
-
-
 
 Speaking broadly, the aim of Vassiliev theory is to study the space of knots via the space of chord diagrams, using information from the stratification of knots introduced in the first two sections. But this space is not just a vector space; it has some further structure which we wish to incorporate. In this section, we synthesise all of this information into one algebraic structure.
 
@@ -965,9 +963,7 @@ We have shown that \(\mathcal{A}\) is a graded bialgebra of finite type. In fact
 	\end{proof}
 \end{shaded}
 
-Connected, commutative, cocommutative graded bialgebras of finite type are very rigid structures. In-particular, a classical strucutral theorem applies, and the Hopf algebra
-%TODO (Zsuzsi) Switched to calling it a Hopf algebra
-can be understood in terms of its primitive elements.
+Connected, commutative, cocommutative graded bialgebras of finite type are very rigid structures. In-particular, a classical strucutral theorem applies, and such a bialgebra can be understood in terms of its primitive elements.
 
 \begin{definition}
 	An element \(x\) is \textbf{primitive} in a coalgebra (so in-particular in a bialgebra) with coproduct \(\Delta\) if it satisfies
@@ -976,16 +972,10 @@ can be understood in terms of its primitive elements.
 \end{definition}
 
 \begin{theorem}[Milnor-Moore]
-	Let \(A\) be a connected, commutative, cocommutative bialgebra of finite type, over a field of characteristic zero. Then, as an algebra, \(A\) is isomorphic to the symmetric algebra of \(\mathcal{P}(A)\). In other words, \(A\) is a polynomial algebra in \(\mathcal{P}(A)\).
+	Let \(H\) be a connected, commutative, cocommutative bialgebra of finite type, over a field of characteristic zero. Then, as an algebra, \(H\) is isomorphic to the symmetric algebra of \(\mathcal{P}(H)\). In other words, \(H\) is a polynomial algebra in \(\mathcal{P}(H)\).
 \end{theorem}
 
-We give a proof due to Christine Lescop in \cite{invariants-of-links-and-3-manifolds-from-graph-configurations}.
-
-\begin{proof}
-	The 
-\end{proof}
-
-This fact leads to important consequences about the structure of \(\mathcal{A}\) and its relation to Lie algebras, which will the subject of Chapter \ref{ch:lie-theory-and-jacobi-diagrams}.
+We refer to \cite{invariants-of-links-and-3-manifolds-from-graph-configurations} or \cite{introduction-to-vassiliev-invariants} for a proof. This fact leads to important consequences about the structure of \(\mathcal{A}\) and its relation to Lie algebras, which will the subject of Chapter \ref{ch:lie-theory-and-jacobi-diagrams}.
 
 \begin{definition}
 	The weight systems (Definition \ref{def:weight-system}), denoted \(\mathcal{W}\), form a graded bialgebra, the \textbf{graded bialgebra of weight systems} with grading given by degree \(m\), product given by pointwise multiplication
@@ -993,19 +983,13 @@ This fact leads to important consequences about the structure of \(\mathcal{A}\)
 	and coproduct, \(\eta\) given by
 	\[\eta(W)(a_{1} \otimes a_{2}) = W(a_{1} \connect a_{2}).\]
 
-	The graded bialgebra \(\mathcal{W}\) is the graded bialgebraic dual 
-     %TODO (ZSuzsi) Dual bialgebra
-    of the graded bialgebra \(\mathcal{A}\).
 \end{definition}
 
-In fact, considering a graded object as a filtered object with the naturally induced filtration, this coincides with the filtered bialgebraic dual.
+In fact, every graded object is a filtered object with the naturally induced filtration. Considering a graded object as such allows us to take its dual filtered bialgebra (which we refer to as its dual graded bialgebra in this case).
 
-\begin{proof}
- %TODO (ZSuzsi) Proof of what? I think you need to take that statement out of the Definition into a Proposition environment.
-	Weight systems are linear functionals on chord diagrams, \(\mathcal{D}\) that vanish on \ref{eq:4Tstar} and \ref{eq:1Tstar}. This is the same as linear functionals on \(\mathcal{A} = \mathcal{D}/\ref{eq:4T}, \ref{eq:1T}\).
-
-	The rest of the proof, (i.e. that the product in \(\mathcal{W}\) is dual to the coproduct in \(\mathcal{A}\) and vice versa) follows exactly as in the proof sketch of the duality of bialgebras \(\mathcal{K}\) and \(\mathcal{V}\).
-\end{proof}
+\begin{proposition}
+	The graded bialgebra \(\mathcal{W}\) is the dual graded bialgebra of the graded bialgebra \(\mathcal{A}\).
+\end{proposition}
 
 \section{The fundamental theorem of Vassiliev invariants}
 \label{sec:the-fundamental-theorem-of-vassiliev-invariants}
@@ -1045,15 +1029,10 @@ We can break the fundamental theorem up into two parts.
 	\end{tblr}
 \end{center}
 
-It is actually only the second part of this theorem, due to Kontesevich that is equivalent to Theorem \ref{thm:fundamental-theorem-of-vassiliev-invariants}. The first part, due to Vassiliev, is additional (so in reality, this `reformulation' is stronger), but considered ``easy'' relative to the second part. 
-%TODO (Zsuzsi) I would rearrange this sentence so that it's clear what easy refers to
-If the goal is to describe \(\mathcal{K}\) by \(\mathcal{A}\),
-%TODO (Zsuzsi) via A? using A?
-it 
-%TODO (Zsuzsi) What is 'it' referring to here?
-states that the relations in \(\mathcal{A}\), \ref{eq:4T} and \ref{eq:1T} are truly compatible with \(\mathcal{K}_{n}/\mathcal{K}_{n + 1}\). Indeed this was the point of Section \ref{sec:the-stratification-on-the-space-of-knots-and-integration}, so most of the work is already done.
+The equivalence of this version of the theorem with the version (Theorem \ref{thm:fundamental-theorem-of-vassiliev-invariants})given in Section \ref{sec:the-stratification-on-the-space-of-knots-and-integration} will be proven at the end of this section.
+
+The point of the part of this theorem due to Vassiliev is that the relations in \(\mathcal{A}\) are compatible with the relations of \(\mathcal{K}_{n} / \mathcal{K}_{n + 1}\). Indeed, \(\mathcal{A}\) was constructed in this way, and much of that work was already done in Section \ref{sec:the-stratification-on-the-space-of-knots-and-integration}.
 % TODO: Find reference for Vassiliev
-% TODO: Rephrase this as not to call Vassiliev's work ``easy''. (Zsuzsi): Only 'easy' compared to Kontsevich's Fields medal... happens to the best of us;)
 
 \begin{proofof}{Theorem \ref{thm:fundamental-theorem-restated} (Vassiliev)}
 	For the map \(a \in \mathcal{A}_{m} \to \mathcal{K}_{m} / \mathcal{K}_{m + 1}\) we take the following. 
@@ -1224,7 +1203,20 @@ induced by the Kontsevich integral. Canonical Vassiliev invariants were first de
 	Is there a reason why the Kontsevich integral, or equivalently, this splitting appears to be canonical?
 \end{question}
 
-\begin{shaded}
-	Why the reformulation was a reformulation. Or: go back and lessen the first formulation to just a related theorem.
-\end{shaded}
+Finally, we return to the equivalence of the two fundamental theorems.
 
+\begin{proof}[Equivalence of Theorems \ref{thm:fundamental-theorem-of-vassiliev-invariants} and \ref{thm:fundamental-theorem-restated}]
+	For the forward direction, suppose Theorem \ref{thm:fundamental-theorem-of-vassiliev-invariants} holds. This states that every invariant \(v\) of \(m\)-singular knots satisfying \ref{eq:T4Tstar} and \ref{eq:T1Tstar} and further that \(\delta v = 0\), then \(v\) integrates to an invariant of \(0\)-singular knots.
+
+	First we prove that the Kontsevich part of the fundamental theorem holds. Let \(W\) be a weight system of order \(m\). Then \(W\) defines an invariant \(W'\) of \(m\)-singular knots by \(W'(k) = W(\sigma(k))\). The derivative of \(W'\) is zero. Indeed, 
+	\[\delta W'(k) = W(\sigma(k^{+})) - W(\sigma(k^{-}))\]
+	for some knots \(k^{+}\) and \(k^{-}\) that differ by crossing changes, but \(\sigma\) is invariant under crossing changes. Also, since \(W\) is a weight system it satisfies \ref{eq:4Tstar} and \ref{eq:1Tstar}, and so \(W'\) satisfies \ref{eq:T4Tstar} and \ref{eq:T1Tstar}. Therefore the conditions of Theorem \ref{thm:fundamental-theorem-of-vassiliev-invariants} and integrates into a Vassiliev invariant.
+
+	The Vassiliev part of the theorem is independent of the original version and was the section of Section \ref{sec:the-stratification-on-the-space-of-knots-and-integration}.
+
+	Now for the reverse direction, suppose Theorem \ref{thm:fundamental-theorem-restated} holds. Take a \(m\)-singular knot invariant \(v\) satisfying \ref{eq:4Tstar} and \ref{eq:1Tstar}, and that \(\delta v = 0\). This defines a weight system \(W_{v}\), which by the Kontsevich part of Theorem \ref{thm:fundamental-theorem-restated} gives an element of \(\mathcal{V}_{m} / \mathcal{V}_{m - 1}\).
+
+	\begin{shaded}
+		Check that this is an integral.
+	\end{shaded}
+\end{proof}
